- Fix 1px gap at the bottom of every page

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -156,3 +156,7 @@ h2 {
   overflow: hidden !important;
   position: fixed !important;
 }
+
+.ui-footer-fixed {
+  padding-bottom: 0 !important;
+}
